--- a/src/app/chinese/player/playerdetail/playerdetail.component.html
+++ b/src/app/chinese/player/playerdetail/playerdetail.component.html
@@ -1,6 +1,4 @@
-<div nz-col [nzMd]="10">
-
-  <form nz-form [formGroup]="detailForm" >
+<form nz-form [formGroup]="detailForm" >
     <div nz-form-item nz-row>
       <div nz-form-label nz-col [nzSpan]="7">
         <label nz-form-item-required>PlayName</label>
@@ -115,10 +113,11 @@
     </div>
     <div nz-form-item nz-row>
       <div nz-col [nzOffset]="7" [nzSpan]="12" nz-form-control>
-        <button nz-button [nzType]="'primary'" [nzSize]="'large'" [disabled]="!detailForm.valid" (click)="update(detailForm.value)">Save</button>
-        <button nz-button [nzSize]="'large'" (click)="resetForm()">Reset</button>
+        <button nz-button [nzType]="'primary'" [nzSize]="'large'" [disabled]="!detailForm.valid&&detailForm.pristine" (click)="update(detailForm.value)">Save</button>
+        <button nz-button [nzSize]="'large'" (click)="resetForm()" [disabled]="detailForm.pristine">Reset</button>
+        <button nz-button [nzSize]="'large'" >BackToTable</button>
       </div>
     </div>
   </form>
   <div>{{detailForm.status}}</div>
-</div>
+
